# MC_X17_Germanium

./: .gitignore  CMakeLists.txt  README.md  mc_germanium.cc
include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  globalsettings.hh  physics.hh  run.hh
macros/: init_vis.mac  run.mac  vis.mac
src/: action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc
